// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeatherCurrent Reducer Tests State Changes should load city on success of loading 1`] = `
Object {
  "error": undefined,
  "isLoading": false,
  "weatherCurrent": Object {},
}
`;

exports[`WeatherCurrent Reducer Tests State Changes should set error on error of loading 1`] = `
Object {
  "error": "Error",
  "isLoading": false,
  "weatherCurrent": undefined,
}
`;
